added timer feature to tasks